Fix 'will execute script' condition for creating custom elements in imports

This CL fixes the 'will execute script' flag calculation
by fixing the definition lookup in
HTMLConstructionSite::lookUpCustomElementDefinition(),
and attributeChangedCallback() will be invoked
properly for custom elements parsed and created
synchronously in imports.

Upgrade case is not affected by this bug.

BUG=642839

Review-Url: https://codereview.chromium.org/2297853006
Cr-Commit-Position: refs/heads/master@{#416176}

Former-commit-id: 94d61015c751d3d5c6ca9deedb0637cfcbbb1283